# opendesk-relay

./: .gitignore  Dockerfile  MANIFEST.in  Makefile  README.md  docker-compose.yml  install-relay.sh  opendesk-relay.service  pyproject.toml  relay-config.yaml  restart-relay.sh
deploy/: opendesk-relay.default  opendesk-relay.logrotate  opendesk-relay.service
src/relay_server/: __init__.py  __main__.py  auth.py  config.py  protocol.py  server.py
src/relay_server/monitoring/: __init__.py  metrics.py
src/relay_server/web/: __init__.py  api.py  app.py
src/relay_server/web/static/: app.js  index.html  style.css
tests/: __init__.py  test_auth.py  test_config.py  test_protocol.py  test_server.py
